--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -3,7 +3,7 @@
 @btn-font-weight: 300;
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
 
-@import url(http://fonts.googleapis.com/css?family=Tangerine:400,700);
+@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Quicksand:400,700|Kaushan+Script);
 
 body, label, .checkbox label {
 	font-weight: 300;
