--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,5 @@
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
-@import url(http://fonts.googleapis.com/css?family=Tangerine:400,700);
+@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Quicksand:400,700|Kaushan+Script);
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
