--- a/resources/css/libs/style.css
+++ b/resources/css/libs/style.css
@@ -1,11 +1,11 @@
-@import url(http://fonts.googleapis.com/css?family=Tangerine:400,700);
 
 body
 {
     background:rgba(0,0,0,0.95);
     line-height: 200%;
-    font-family: 'Tangerine', cursive;
-    font-size: 20px;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 12px;
+    font-weight:400;
 }
 
 section
@@ -21,9 +21,10 @@ section .container
 
 p
 {
-    font-size: 28px;
-    font-family: 'Tangerine', cursive;
+    font-size: 16px;
+    font-family: 'PT Sans', sans-serif;
     color:#FFFFFF;
+    font-weight: 400;
 }
 
 p strong
@@ -35,16 +36,22 @@ p strong
 p a
 {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 h1,h2,h3,h4,h5
 {
     margin:0px;
+    margin-top: 15px;
     padding-bottom: 15px;
-    font-size:48px;
+    font-size:30px;
     font-weight: 700;
     color:#FFFFFF;
+    font-family: 'Quicksand', sans-serif;
+}
+h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child
+{
+    margin-top: 0px;
 }
 
 h3,h4
@@ -53,6 +60,10 @@ h3,h4
     padding-bottom:10px;
 }
 
+img
+{
+    width:100%;
+}
 
 
 label
@@ -86,8 +97,8 @@ header
 
 header .navbar-default .navbar-brand,header .navbar-default .navbar-brand:hover
 {
-    font-family: 'Tangerine', cursive;
-    font-size: 36px;
+    font-family: 'Kaushan Script', cursive;
+    font-size: 20px;
     color:#FFFFFF;
 }
 header a:hover
@@ -105,7 +116,8 @@ header .navbar-default
 header .navbar-default .navbar-nav > li > a,header .navbar-default .navbar-nav > li > a:hover
 {
     color:#FFFFFF;
-    font-size: 20px;
+    font-size: 14px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 
@@ -128,12 +140,24 @@ footer .container a img
 {
     min-height:400px;
     width:100%;
-    background:url('../../images/banner.jpg');
+    background:url('../images/banner.jpg');
     background-position: center;
-    background-size: cover;
+    background-size: 100% auto;
     color:#FFFFFF;
     text-shadow: 0px 0px 5px rgba(0,0,0,1);
     -moz-text-shadow: 0px 0px 5px rgba(0,0,0,1);
+}
+.banner_container.banner1
+{
+    background-image:url('../images/banner_blog.jpg');
+}
+.banner_container.banner2
+{
+    background-image:url('../images/banner_blog.jpg');
+}
+.banner_container.banner3
+{
+    background-image:url('../images/banner3.jpg');
 }
 .banner_container .container
 {
@@ -162,6 +186,7 @@ footer .container a img
     margin-bottom:50px;
     border-radius:10px;
     -moz-border-radius:10px;
+    min-height: 500px;
 }
 @media(max-width:1200px)
 {
@@ -224,14 +249,49 @@ footer .container a img
 
 .blog_articles .article > div h3
 {
-    font-size: 28px;
+    font-size: 22px;
     padding-bottom: 5px;
 }
 .blog_articles .article > div p
 {
-    font-size: 24px;
+    font-size: 14px;
 
 }
+
+.blog_articles .article .blog_image_background
+{
+    width:100%;
+    height:100%;
+    overflow: hidden;
+    position:absolute;
+    top:0px;
+    left:0px;
+    padding: 0px;
+    z-index: -1;
+}
+.blog_articles .article .blog_image_background img
+{
+    width:100%;
+    height:auto;
+    opacity: 0.8;
+    padding:0px;
+}
+
+.blog_articles .article div.home_page
+{
+    border:none;
+    margin-top:15px;
+}
+
+.blog_image,.portfolio_image
+{
+    height:300px;
+    width:auto;
+    margin: 0px auto;
+    margin-bottom: 15px;
+}
+
+
 
 
 
@@ -242,18 +302,68 @@ footer .container a img
 }
 .portfolio_container .portfolio > div
 {
+    margin-bottom: 15px;
     padding:5px;
-    border-bottom:1px solid #1a1a1a;
+    border:1px solid #99ee99;
+}
+.portfolio_container .portfolio > div:hover
+{
+    background:rgba(0,0,0,0.15);
 }
 
-.portfolio_container .portfolio > div .portofolio_image_container
+.portfolio_container .portfolio > div h2
+{
+    font-size:24px;
+}
+
+.portfolio_container .portfolio > div h3
+{
+    font-size: 22px;
+    padding-bottom: 5px;
+}
+.portfolio_container .portfolio > div p
+{
+    font-size: 14px;
+
+}
+
+.portfolio_container .portfolio > div .portfolio_image_container
 {
     max-height:100px;
     overflow: hidden;
+    border:1px solid #99ee99;
 }
 
-.portfolio_container .portfolio > div .portofolio_image_container img
+.portfolio_container .portfolio > div .portfolio_image_container img
 {
     min-width: 100%;
     height:auto;
+}
+
+
+.portfolio_container .portfolio .profile_image_background
+{
+    width:100%;
+    height:100%;
+    overflow: hidden;
+    position:absolute;
+    top:0px;
+    left:0px;
+    padding: 0px;
+    z-index: -1;
+    border:1px solid #99ee99;
+}
+.portfolio_container .portfolio .profile_image_background img
+{
+    width:100%;
+    height:auto;
+    opacity: 0.8;
+    padding:0px;
+    min-height: 100%;
+}
+
+.portfolio_container .portfolio div.home_page
+{
+    border:none;
+    margin-top:15px;
 }
