Made changes to work with pretty URL

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -6534,7 +6534,7 @@ footer .container a img
 
 .portfolio_container .portfolio
 {
-
+    margin-bottom: 15px;
 }
 .portfolio_container .portfolio > div
 {
