--- a/resources/css/libs/style.css
+++ b/resources/css/libs/style.css
@@ -298,7 +298,7 @@ footer .container a img
 
 .portfolio_container .portfolio
 {
-
+    margin-bottom: 15px;
 }
 .portfolio_container .portfolio > div
 {
